[tool.poetry]
name = "dhp"
description = "Dane Hillard Photography"
version = "1.0.0"
authors = ["daneah <github@danehillard.com"]

[tool.poetry.dependencies]
python = "^3.6.0"
boto3 = "*"
coverage = {version="*", extras=["toml"]}
django = "~=2.1.15"
django-codemirror-widget = "*"
gunicorn = "*"
Pillow = "*"
requests = "*"
rollbar = "*"
sorl-thumbnail = "*"
zappa = "*"
django-storages = "*"
django-webpack-loader = "*"
mysqlclient = "*"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"
pytest = "*"
pytest-django = "*"
pytest-cov = "*"
black = "^19.10b0"
flake8 = "^3.7.9"

[tool.black]
line_length = 120
target-version = ["py36", "py37", "py38"]

[tool.coverage.run]
source = [
    ".",
]

omit = [
    "*/__init__.py",
    "*/migrations/*",
    "*/tests/*",
    "*/test_*",
    "manage.py",
    "configuration/*",
    "*/admin.py",
    "*/apps.py",
    "*/urls.py",
    "sitemaps.py",
]

branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
